force-app/main/default/objects/Booking_Hotel__c/Booking_Hotel__c.object-meta.xml
<CustomObject>
    <label>Booking Hotel</label>
    <nameField>
        <displayFormat>Booking Hotel-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>