force-app/main/default/objects/Booking_Hotel__c/fields/Accessibility__c.field-meta.xml
<CustomField>
    <fullName>Accessibility__c</fullName>
    <label>Accessibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accessible Bathroom</fullName>
            </value>
            <value>
                <fullName>Accessible Path</fullName>
            </value>
            <value>
                <fullName>Braille or raised signage</fullName>
            </value>
            <value>
                <fullName>Equipment For Deaf</fullName>
            </value>
            <value>
                <fullName>In Room Accessbility</fullName>
            </value>
            <value>
                <fullName>Roll-in Shower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>