force-app/main/default/objects/Booking_Hotel__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Booking Hotels</relationshipLabel>
    <relationshipName>Booking_Hotels</relationshipName>
    <type>Lookup</type>
</CustomField>