force-app/main/default/objects/Booking_Hotel__c/fields/Amendment_reason__c.field-meta.xml
<CustomField>
    <fullName>Amendment_reason__c</fullName>
    <label>Amendment reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>