force-app/main/default/objects/Booking_Hotel__c/fields/Ammendment_Done__c.field-meta.xml
<CustomField>
    <fullName>Ammendment_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ammendment Done</label>
    <type>Checkbox</type>
</CustomField>