force-app/main/default/objects/Booking_Hotel__c/fields/Booking_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Booking_Surcharges__c</fullName>
    <formula>TAD_Order__r.TAD_Surcharge_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>