force-app/main/default/objects/Booking_Hotel__c/fields/Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount__c</fullName>
    <label>Cancellation Amount</label>
    <summarizedField>Room__c.Cancellation_Amount_Room__c</summarizedField>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>