force-app/main/default/objects/Booking_Hotel__c/fields/Cancellation_Amount_Order__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Amount_Order__c</fullName>
    <label>Cancellation Amount Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>