force-app/main/default/objects/Booking_Hotel__c/fields/Cancellation_Policy_Type__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Policy_Type__c</fullName>
    <label>Cancellation Policy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Refundable</fullName>
            </value>
            <value>
                <fullName>Non-Refundable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>