force-app/main/default/objects/Booking_Hotel__c/fields/Cancellation_Refund__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancellation/Refund</label>
    <referenceTo>Cancellation_Refund_POE__c</referenceTo>
    <relationshipLabel>Booking Hotels</relationshipLabel>
    <relationshipName>Booking_Hotels</relationshipName>
    <type>Lookup</type>
</CustomField>