force-app/main/default/objects/Booking_Hotel__c/fields/CanRef_status__c.field-meta.xml
<CustomField>
    <fullName>CanRef_status__c</fullName>
    <label>CanRef status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Partial Refund Processed</fullName>
            </value>
            <value>
                <fullName>Full Refund Processed</fullName>
            </value>
            <value>
                <fullName>Finance Rejected</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>