force-app/main/default/objects/Booking_Hotel__c/fields/Check_Out_date__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_date__c</fullName>
    <label>Check Out date</label>
    <type>Date</type>
</CustomField>