force-app/main/default/objects/Booking_Hotel__c/fields/Check_out_instructions__c.field-meta.xml
<CustomField>
    <fullName>Check_out_instructions__c</fullName>
    <label>Check out instructions</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>