force-app/main/default/objects/Booking_Hotel__c/fields/Coupon_Payment_received__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Payment_received__c</fullName>
    <label>Coupon Payment received_</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>