force-app/main/default/objects/Booking_Hotel__c/fields/Currency_Iso_Code_Update__c.field-meta.xml
<CustomField>
    <fullName>Currency_Iso_Code_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currency Iso Code Update</label>
    <type>Checkbox</type>
</CustomField>