force-app/main/default/objects/Booking_Hotel__c/fields/Expedia_Booking_Amount__c.field-meta.xml
<CustomField>
    <fullName>Expedia_Booking_Amount__c</fullName>
    <formula>Gross_Cost__c - Booking_Surcharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expedia Booking Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>