force-app/main/default/objects/Booking_Hotel__c/fields/Expedia_Booking_reference_number__c.field-meta.xml
<CustomField>
    <fullName>Expedia_Booking_reference_number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Expedia Booking reference number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>