force-app/main/default/objects/Booking_Hotel__c/fields/Gross_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gross_Cost__c</fullName>
    <formula>Subtotal__c  +  Booking_Surcharges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>