force-app/main/default/objects/Booking_Hotel__c/fields/Has_Wifi__c.field-meta.xml
<CustomField>
    <fullName>Has_Wifi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Free Wifi</label>
    <type>Checkbox</type>
</CustomField>