force-app/main/default/objects/Booking_Hotel__c/fields/Hotel_Image__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Image__c</fullName>
    <label>Hotel Image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>