force-app/main/default/objects/Booking_Hotel__c/fields/Is_Member_Price__c.field-meta.xml
<CustomField>
    <fullName>Is_Member_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Member Price</label>
    <type>Checkbox</type>
</CustomField>