force-app/main/default/objects/Booking_Hotel__c/fields/Itinerary_ID__c.field-meta.xml
<CustomField>
    <fullName>Itinerary_ID__c</fullName>
    <label>Itinerary ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>