force-app/main/default/objects/Booking_Hotel__c/fields/Local_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>Local_Currency_Code__c</fullName>
    <label>Local tax ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>