force-app/main/default/objects/Booking_Hotel__c/fields/Local_Tax__c.field-meta.xml
<CustomField>
    <fullName>Local_Tax__c</fullName>
    <label>Local Tax</label>
    <summarizedField>Room__c.Local_Tax__c</summarizedField>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>