force-app/main/default/objects/Booking_Hotel__c/fields/Local_tax_in_AUD__c.field-meta.xml
<CustomField>
    <fullName>Local_tax_in_AUD__c</fullName>
    <label>Local tax in AUD</label>
    <summarizedField>Room__c.Local_tax_in_AUD__c</summarizedField>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>