force-app/main/default/objects/Booking_Hotel__c/fields/Modification_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Modification_in_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modification in Progress?</label>
    <type>Checkbox</type>
</CustomField>