force-app/main/default/objects/Booking_Hotel__c/fields/Modification_True__c.field-meta.xml
<CustomField>
    <fullName>Modification_True__c</fullName>
    <label>Modification True</label>
    <type>DateTime</type>
</CustomField>