force-app/main/default/objects/Booking_Hotel__c/fields/No_of_Pax__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pax__c</fullName>
    <label>No of Pax</label>
    <summarizedField>Room__c.Pax_Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>