force-app/main/default/objects/Booking_Hotel__c/fields/Number_Of_Nights__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Nights__c</fullName>
    <label>Number of Nights Stay</label>
    <summarizedField>Room__c.Number_Of_Nights__c</summarizedField>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>