force-app/main/default/objects/Booking_Hotel__c/fields/ordexp_Coupon_Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>ordexp_Coupon_Payment_Received__c</fullName>
    <formula>TAD_Order__r.Total_Order_OLI_Coupon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coupon Payment Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>