force-app/main/default/objects/Booking_Hotel__c/fields/Original_Tax_Fees__c.field-meta.xml
<CustomField>
    <fullName>Original_Tax_Fees__c</fullName>
    <label>Original Tax &amp; Fees</label>
    <summarizedField>Room__c.Original_Tax_Fees__c</summarizedField>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>