force-app/main/default/objects/Booking_Hotel__c/fields/Property_Country__c.field-meta.xml
<CustomField>
    <fullName>Property_Country__c</fullName>
    <label>Property Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>