force-app/main/default/objects/Booking_Hotel__c/fields/Property_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>Property_Full_Address__c</fullName>
    <formula>Property_Address__c +&apos;, &apos;+Property_City__c + &apos; &apos;+ Property_Region__c +&apos; &apos;+ Property_Country__c +&apos; &apos;+ Property_Postcode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Full Address</label>
    <type>Text</type>
</CustomField>