force-app/main/default/objects/Booking_Hotel__c/fields/Property_Region__c.field-meta.xml
<CustomField>
    <fullName>Property_Region__c</fullName>
    <label>Property Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>