force-app/main/default/objects/Booking_Hotel__c/fields/Property_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Property_Suburb__c</fullName>
    <label>Property Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>