force-app/main/default/objects/Booking_Hotel__c/fields/Purchase_date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_date__c</fullName>
    <label>Purchase date</label>
    <type>DateTime</type>
</CustomField>