force-app/main/default/objects/Booking_Hotel__c/fields/Qantas_Frequent_Flyer_Number__c.field-meta.xml
<CustomField>
    <fullName>Qantas_Frequent_Flyer_Number__c</fullName>
    <label>Qantas Frequent Flyer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>