force-app/main/default/objects/Booking_Hotel__c/fields/QFF_Payment__c.field-meta.xml
<CustomField>
    <fullName>QFF_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QFF Payment</label>
    <type>Checkbox</type>
</CustomField>