force-app/main/default/objects/Booking_Hotel__c/fields/Room_Cancellation_Amont__c.field-meta.xml
<CustomField>
    <fullName>Room_Cancellation_Amont__c</fullName>
    <label>Room Cancellation Amount</label>
    <summarizedField>Room__c.Cancellation_Amount_Room__c</summarizedField>
    <summaryFilterItems>
        <field>Room__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Room__c.Booking_Hotel__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>