force-app/main/default/objects/Booking_Hotel__c/fields/Room_Max_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Room_Max_Occupancy__c</fullName>
    <label>Room Max Occupancy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>