force-app/main/default/objects/Booking_Hotel__c/fields/Room_Title__c.field-meta.xml
<CustomField>
    <fullName>Room_Title__c</fullName>
    <label>Room Title</label>
    <type>TextArea</type>
</CustomField>