force-app/main/default/objects/Booking_Hotel__c/fields/Rooms_and_Nights__c.field-meta.xml
<CustomField>
    <fullName>Rooms_and_Nights__c</fullName>
    <formula>TEXT(No_of_Rooms__c )&amp;&apos; &apos;&amp; &quot;Rooms&quot; &amp;&apos; &apos;&amp;&quot;X&quot;&amp;&apos; &apos;&amp;TEXT(Number_of_Nights_Stay__c )&amp;&apos; &apos;&amp;&quot;Nights&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rooms and Nights</label>
    <type>Text</type>
</CustomField>