force-app/main/default/objects/Booking_Hotel__c/fields/Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>Special_Requests__c</fullName>
    <description>Hotel Special requests</description>
    <label>Special Requests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>