force-app/main/default/objects/Booking_Hotel__c/fields/Star_rating__c.field-meta.xml
<CustomField>
    <fullName>Star_rating__c</fullName>
    <label>Star rating</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>