force-app/main/default/objects/Booking_Hotel__c/fields/Stay_Duration__c.field-meta.xml
<CustomField>
    <fullName>Stay_Duration__c</fullName>
    <formula>Check_Out_date__c -  Check_In_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stay Duration(nights)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>