force-app/main/default/objects/Booking_Hotel__c/fields/Total_Amount_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Outstanding__c</fullName>
    <formula>IF( ISPICKVAL( CanRef_status__c , &apos;Processed&apos;) , 0, Gross_Cost__c -  (ordexp_Total_Payment_Received__c + ordexp_Coupon_Payment_Received__c))</formula>
    <label>Total Amount Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>