force-app/main/default/objects/Booking_Hotel__c/fields/Total_Order_Coupons_Discount__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Coupons_Discount__c</fullName>
    <label>Total Order Coupons Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>