force-app/main/default/objects/Booking_Hotel__c/fields/Total_Payment_Received_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received_c__c</fullName>
    <formula>TAD_Order__r.ordexp_total_payment_rollup__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total_Payment_Received__c</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>