force-app/main/default/objects/Booking_Hotel__c/fields/Total_Payment_Received_Without_QFF__c.field-meta.xml
<CustomField>
    <fullName>Total_Payment_Received_Without_QFF__c</fullName>
    <formula>TAD_Order__r.Total_Payment_Received_Without_QFF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payment Received Without QFF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>