force-app/main/default/objects/Booking_Hotel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Subtotal__c</columns>
    <columns>Status__c</columns>
    <columns>Property_Phone_Number__c</columns>
    <columns>TAD_Order__c</columns>
    <columns>Subtotal_Local_Tax__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>